--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "cy:pageobject": "cypress run --spec cypress/integration/checkout.spec.js",
-    "cy:appaction": "cypress run --spec cypress/integration/registration-count.spec.js"
+    "cy:appaction": "cypress run --spec cypress/integration/registration-count.spec.js",
+    "report:merge": "mochawesome-merge cypress/report/mochawesome-report/*.json > cypress/report/index.json",
+    "report:generate": "marge cypress/report/index.json --reportDir ./ --inline",
+    "report:cleanup": "del /s cypress/report/*"
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,11 @@
   "homepage": "https://github.com/WillianVitorino/exercicio-modulo22#readme",
   "dependencies": {
     "cypress": "^9.7.0"
+  },
+  "devDependencies": {
+    "cypress-multi-reporters": "^1.6.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
