--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cypress-multi-reporters": "^1.6.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.1",
-    "mochawesome-report-generator": "^6.2.0"
+    "mochawesome-report-generator": "^6.2.0",
+    "start-server-and-test": "^1.14.0"
   }
 }
