--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           install-command: npm install
           browser: chrome
+          with: npm start
       - name: Publish report
         uses: peaceiris/actions-gh-pages@v3
         with:
