--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cy:appaction": "cypress run --spec cypress/integration/registration-count.spec.js",
     "report:merge": "mochawesome-merge cypress/report/mochawesome-report/*.json > cypress/report/index.json",
     "report:generate": "marge cypress/report/index.json --reportDir ./ --inline",
-    "report:cleanup": "del /s cypress/report/*"
+    "report:cleanup": "del /s cypress/report/*",
+    "start": "npx serverest"
   },
   "repository": {
     "type": "git",
